--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,8 @@ fabric.properties
 *.tar.gz
 *.rar
 
+main.java
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
