--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ fabric.properties
 *.rar
 
 main.java
+Main.java
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
