--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ fabric.properties
 
 main.java
 Main.java
+TEST.java
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
