--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,7 @@ fabric.properties
 main.java
 Main.java
 TEST.java
+**/secret
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
